# ForgeTube

./: .env.example  README.md  app.py  config.py  flask_frontend_README.md  main.py  main_local.py  pyproject.toml  requirements.txt
Samples/Subtitles/: .srtNeural.srt
Samples/Subtitles/.srt/: Neural Networks in Medical Imaging.srt
Samples/templates/: mock_script 5.json
Tests/: mytest.py
Video Assembly/: assembly_video_proto.py
assembly/scripts/: assembly_video.py
diffusion/scripts/: generate_image.py  generate_image_local.py  generate_script.py
static/css/: landing.css  style.css
static/js/: main.js
templates/: create.html  error.html  index.html  layout.html  progress.html  refine.html
tts/scripts/: generate_audio.py
